--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,10 +20,10 @@ body {
 	font-family: "Open Sans", "Helvetica Neue",Helvetica,Arial,sans-serif;
 	-webkit-font-smoothing: antialiased;
 	background: #e9eaec;
-	margin-top:80px;
+	margin-top:50px;
 }
 header {
-	background: #073648;
+	background: #fff;
 	box-shadow: 0 2px 3px 0 rgba(0,0,0,0.3);
 	-webkit-box-shadow: 0 2px 3px 0 rgba(0,0,0,0.3);
 	-moz-box-shadow: 0 2px 3px 0 rgba(0,0,0,0.3);
@@ -31,7 +31,7 @@ header {
 	ul {
 		li {
 			a {
-				color: #ddd;
+				color: #333;
 			}
 		}
 	}
@@ -87,7 +87,42 @@ a:hover {
 		color: #999;
 	}
 }
+.hero-unit {
+	background: image-url('bg.jpg');
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	padding:30px;
+	color: #fff;
+	margin-bottom: 30px;
 
+	h2 {
+		margin: 10px 0 30px 0;
+	}
+	h4 {
+		text-transform: uppercase;
+		margin: 250px 0 0 0;
+	}
+
+	.form-control {
+		width:500px;
+		float:left;
+		border-top-right-radius: 0px;
+		border-bottom-right-radius: 0px;
+		margin-bottom: 20px;
+	}
+	.btn {
+		border-top-left-radius: 0px;
+		border-bottom-left-radius: 0px;
+		padding: 16px 50px;
+	}
+}
+.form-control {
+	border:none;
+	border-radius: 2px;
+	height: 52px;
+}
 
 
 
