--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,9 +1,11 @@
 %header.navbar.navbar-fixed-top
 	.container-fluid
 		.navbar-header
-		= image_tag('logo.png', class: "navbar-brand")
+		= link_to root_path do
+			= image_tag('logo.png', class: "navbar-brand")
 		%nav.collapse.navbar-collapse.bs-navbar-collapse
 			%ul.nav.navbar-nav.navbar-right
+				%li= link_to "Add New Restaurant", new_restaurant_path
 				%li= link_to "Register", "#"
 				%li= link_to "Login", "#"
 				
