--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,14 +19,11 @@
 body {
 	font-family: "Open Sans", "Helvetica Neue",Helvetica,Arial,sans-serif;
 	-webkit-font-smoothing: antialiased;
-	background: #e9eaec;
+	background: #f5f5f5;
 	margin-top:50px;
 }
 header {
 	background: #fff;
-	box-shadow: 0 2px 3px 0 rgba(0,0,0,0.3);
-	-webkit-box-shadow: 0 2px 3px 0 rgba(0,0,0,0.3);
-	-moz-box-shadow: 0 2px 3px 0 rgba(0,0,0,0.3);
 
 	ul {
 		li {
@@ -35,6 +32,9 @@ header {
 			}
 		}
 	}
+}
+.navbar {
+	border: 1px solid #DCE0E0;
 }
 .container-fluid {
 	padding: 0 30px;
