finish restaurant create and edit

--- a/app/views/restaurants/edit.html.haml
+++ b/app/views/restaurants/edit.html.haml
@@ -1,2 +1,6 @@
-%h1 Restaurants#edit
-%p Find me in app/views/restaurants/edit.html.haml
+.row
+  .col-sm-10.col-sm-offset-1
+    %h3 
+      Edit 
+      = @restaurant.name
+    = render 'form'
