--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,9 +15,32 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
+@font-face{
+    font-family:'AvenirLT-Medium';
+    src:url('avenirlt-medium.eot');
+    src:url('avenirlt-medium.eot?#iefix') format("embedded-opentype"),
+        url('avenirlt-medium.woff') format("woff"),
+        url('avenirlt-medium.ttf') format("truetype")
+}
+@font-face{
+    font-family:'AvenirLT-Black';
+    src:url('avenirlt-black.eot');
+    src:url('avenirlt-black.eot?#iefix') format("embedded-opentype"),
+        url('avenirlt-black.woff') format("woff"),
+        url('avenirlt-black.ttf') format("truetype")
+}
+@font-face{
+    font-family:'AvenirLT-Roman';
+    src:url('avenirlt-roman.eot');
+    src:url('avenirlt-roman.eot?#iefix') format("embedded-opentype"),
+        url('avenirlt-roman.woff') format("woff"),
+        url('avenirlt-roman.ttf') format("truetype")
+}
+* {
+	outline: none !important;
+}
 body {
-	font-family: "Open Sans", "Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-family: "AvenirLT-Medium", "Helvetica Neue",Helvetica,Arial,sans-serif;
 	-webkit-font-smoothing: antialiased;
 	background: #f5f5f5;
 	margin-top:50px;
@@ -62,6 +85,7 @@ a:hover {
 	border: 1px solid #ddd;
 	border-radius: 2px;
 
+	.panel-body,
 	.panel-heading {
 		font-weight: 100;
 		padding: 30px;
@@ -111,6 +135,8 @@ a:hover {
 		border-top-right-radius: 0px;
 		border-bottom-right-radius: 0px;
 		margin-bottom: 20px;
+		height: 52px;
+		border:none;
 	}
 	.btn {
 		border-top-left-radius: 0px;
@@ -119,17 +145,44 @@ a:hover {
 	}
 }
 .form-control {
-	border:none;
 	border-radius: 2px;
-	height: 52px;
+	-webkit-box-shadow: none;
+	box-shadow: none; 
+	height: 50px;
+	padding: 8px 12px 6px 12px;
 }
-
-
-
-
-
-
-
+.form-control:focus {
+  border-color: #999;
+  outline: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+.form-group {
+	margin-bottom: 30px;
+}
+.form-group:last-child {
+	border-bottom: none;
+	margin:0;
+}
+form label {
+	color: #656565
+}
+textarea.form-control {
+	height:300px;
+	resize:none;
+}
+.alert {
+  border-radius: 0px; 
+}
+footer {
+	margin-top:100px;
+	background: #444;
+	padding:50px;
+	color: #9E9E9E;
+}
+.btn-lg {
+	padding: 18px 16px;
+}
 
 
 
