--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
     = csrf_meta_tags
   %body
     = render 'layouts/header'
+    = render 'layouts/flash'
     .container
       = yield
     = render 'layouts/footer'
