--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -7,7 +7,7 @@
 			%ul.nav.navbar-nav.navbar-right
 				- unless params[:controller] == "restaurants" && params[:action] == "new"
 					%li= link_to "Add New Restaurant", new_restaurant_path
-				%li= link_to "Register", "#"
-				%li= link_to "Login", "#"
+				%li= link_to "Register", register_path
+				%li= link_to "Login", new_user_session_path
 
 				
