--- a/app/views/layouts/devise.html.haml
+++ b/app/views/layouts/devise.html.haml
@@ -5,5 +5,10 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
-  %body
-    = yield
+  %body#devise
+    = link_to "Go Back", root_path, class: "btn btn-default"
+    #wrapper
+      #page
+        #content_container
+          #content
+            = yield
