--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,21 +1,20 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  .field
-    = f.label :password
-    - if @validatable
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+.panel
+  .panel-body.devise
+    %button.btn.btn-lg.btn-block.btn-info
+      Register with Twitter
+    %p{ style: "margin: 15px 0; text-align:center" } or
+    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+      = devise_error_messages!
+      .form-group
+        = f.text_field :name, class: "form-control", placeholder: "Name"
+      .form-group
+        = f.email_field :email, class: "form-control", placeholder: "Email"
+      .form-group
+        = f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "Password"
+      .form-group
+        = f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "Password Confirmation"
+      .actions
+        = f.submit "Sign up", class: "btn btn-primary btn-block btn-lg"
+    %p{ style: "margin:0" }
+      Already have an account?
+      = link_to "Log in", new_user_session_path
