fix routes for devise

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -17,4 +17,4 @@
         = f.submit "Sign up", class: "btn btn-primary btn-block btn-lg"
     %p{ style: "margin:0" }
       Already have an account?
-      = link_to "Log in", new_user_session_path
+      = link_to "Log in", login_path
