edit restaurant show page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -71,6 +71,9 @@ header {
 		}
 	}
 }
+.center {
+  text-align: center;
+}
 .navbar {
 	border: 1px solid #DCE0E0;
 }
@@ -250,6 +253,80 @@ footer {
 .btn-default  {
 	border: 1px solid #c4c4c4;
 }
+
+/*----------------------------------------------------------------
+Restaurant Results
+------------------------------------------------------------------*/
+.restaurant-results {
+  width: 50%;
+  float:left;
+}
+.map {
+ width:50%;
+ float: right;
+}
+
+/*----------------------------------------------------------------
+Restaurant Show Page
+------------------------------------------------------------------*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
