--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -1,5 +1,4 @@
-= render 'layouts/hero_unit'
-.container
+.restaurant-results
 	.panel
 		.panel-heading
 			%h4 Diners' Choice Winners: Best Overall
@@ -17,3 +16,5 @@
 					.col-sm-6
 						.restaurant-description 
 							= restaurant.description
+.map
+.clearfix
