--- a/app/views/restaurants/new.html.haml
+++ b/app/views/restaurants/new.html.haml
@@ -1,4 +1,5 @@
-.row
-	.col-sm-10.col-sm-offset-1
-		%h3 Add New Restaurant
-		= render 'form'
+.conatiner
+  .row
+  	.col-sm-10.col-sm-offset-1
+  		%h3 Add New Restaurant
+  		= render 'form'
