--- a/app/views/restaurants/edit.html.haml
+++ b/app/views/restaurants/edit.html.haml
@@ -1,6 +1,7 @@
-.row
-  .col-sm-10.col-sm-offset-1
-    %h3 
-      Edit 
-      = @restaurant.name
-    = render 'form'
+.container
+  .row
+    .col-sm-10.col-sm-offset-1
+      %h3 
+        Edit 
+        = @restaurant.name
+      = render 'form'
