--- a/app/views/restaurants/new.html.haml
+++ b/app/views/restaurants/new.html.haml
@@ -1,5 +1,5 @@
-.conatiner
-  .row
-  	.col-sm-10.col-sm-offset-1
-  		%h3 Add New Restaurant
-  		= render 'form'
+.container
+	.row
+		.col-sm-10.col-sm-offset-1
+			%h3 Add New Restaurant
+			= render 'form'
