add google maps

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -262,8 +262,11 @@ Restaurant Results
   float:left;
 }
 .map {
- width:50%;
- float: right;
+	height: inherit;
+	width:50%;
+	float: right;
+	position:fixed;
+  right:0;
 }
 
 /*----------------------------------------------------------------
@@ -271,6 +274,16 @@ Restaurant Show Page
 ------------------------------------------------------------------*/
 
 
+/*----------------------------------------------------------------
+Google Maps API
+------------------------------------------------------------------*/
+#map-container {
+   height: 100%;
+ }
+ #map-canvas {
+   height: 100%;
+   width: 100%;
+ }
 
 
 
