--- a/app/views/layouts/restaurant.html.haml
+++ b/app/views/layouts/restaurant.html.haml
@@ -1,10 +1,6 @@
 !!!
 %html
-	%head
-		%title Restaurant
-		= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
-		= javascript_include_tag 'application', 'data-turbolinks-track' => true
-		= csrf_meta_tags
+	= render 'layouts/head'
 	%body
 		= render 'layouts/header'
 		= render 'layouts/flash'
