--- a/app/views/owners/registrations/new.html.haml
+++ b/app/views/owners/registrations/new.html.haml
@@ -1,3 +1,4 @@
+owner
 .panel
   .panel-body.devise
     %button.btn.btn-lg.btn-block.btn-info
@@ -17,4 +18,4 @@
         = f.submit "Sign up", class: "btn btn-primary btn-block btn-lg"
     %p{ style: "margin:0" }
       Already have an account?
-      = link_to "Log in", login_path
+      = link_to "Log in", new_owner_session_path
